app/styles/main.css
html {
  height: 100%;
  margin: 0;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

body {
  height: inherit;
  display: flex;
}

#videoContainer {
  background-color: #282C34;
  flex: 3;
}

.alert {
  height: 38px;
  line-height: 10px;
}

#controls {
  color: #95a5a6;
  padding-top: 10px;
  padding-left: 10px;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

button {
  color: black;
}

input {
  color: black;
}

#tools {
  background-color: #21252B;
  flex: 1;
  overflow: scroll;
}

#alerts {
  margin-left: -9%;
  margin-top: 10px;
  height: 10px;
}

.peerVideo {
  display: inline-flex;
}

#localMediaContainer {
  background-color: black;
  /*anchor localMedia to bottom of screen*/
  position: fixed;
  bottom: 0;
  /*bound width of localMedia*/
  width: 25%;
}

.message {
  /*background-color: #f1c40f;
  opacity: .5;*/
  color: #95a5a6;
  min-height: 25px;
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 2px solid #95a5a6;

}

